--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <ul>
-        <li>我牛屁最美，不接受任何反驳</li>
-        <li>我牛屁最美，不接受任何反驳</li>
-        <li>我牛屁最美，不接受任何反驳</li>
-        <li>我牛屁最美，不接受任何反驳</li>
-        <li>我牛屁最美，不接受任何反驳</li>
+        <li>我12最美，不接受任何反驳</li>
+        <li>我12最美，不接受任何反驳</li>
+        <li>我12最美，不接受任何反驳</li>
+        <li>我12最美，不接受任何反驳</li>
+        <li>我12最美，不接受任何反驳</li>
     </ul>
 </body>
 
